# hack-2-todo

./: .gitignore  CLAUDE.md  README.md  constitution.md  docker-compose.yml  pyproject.toml  vercel.json
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  pyproject.toml  railway.json  requirements.txt
backend/src/todo_api/: __init__.py  config.py  database.py  events.py  main.py  models.py
backend/src/todo_api/auth/: jwt.py
backend/src/todo_api/mcp/: tools.py
backend/src/todo_api/routers/: chat.py  tasks.py
backend/tests/: conftest.py  test_tasks.py
dapr/: README.md
dapr/components/: kafka-pubsub-cloud.yaml  kafka-pubsub.yaml  reminder-cron.yaml  statestore.yaml
dapr/config/: config.yaml
dapr/subscriptions/: reminders.yaml  task-events.yaml  task-updates.yaml
frontend/: .dockerignore  package.json  pnpm-lock.yaml  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/login/: page.tsx
frontend/lib/: api.ts  auth-client.ts  auth.ts
frontend/types/: index.ts
k8s/: Dockerfile.backend  Dockerfile.frontend  README.md
k8s/scripts/: build-images.sh  deploy.sh  teardown.sh
specs/: CLARIFICATIONS.md  DEVELOPMENT-PLAN.md  TASKS.md
specs/phase1/: README.md  acceptance-criteria.md  console-todo-spec.md  data-model.md  requirements.md  ui-spec.md
specs/phase2/: acceptance-criteria.md  api-spec.md  auth-spec.md  data-model.md  database-spec.md  frontend-spec.md  requirements.md
specs/phase3/: acceptance-criteria.md  api-spec.md  data-model.md  frontend-spec.md  mcp-spec.md  requirements.md
specs/phase4/: acceptance-criteria.md  docker-spec.md  helm-spec.md  requirements.md
specs/phase5/: acceptance-criteria.md  api-spec.md  dapr-spec.md  data-model.md  kafka-spec.md  requirements.md
src/todo/: __init__.py  __main__.py  manager.py  models.py  ui.py
tests/: __init__.py  test_manager.py  test_models.py  test_ui.py
(+27 files in other folders)
